fix overflow in field content

--- a/packages/oceanfront/src/scss/_fields.scss
+++ b/packages/oceanfront/src/scss/_fields.scss
@@ -117,6 +117,7 @@
   color: $color-field;
   display: flex;
   font-size: $font-size-input;
+  overflow: hidden;
   position: relative;
   max-width: 100%; // don't extend past containing cell
   // vertical-align: $vertical-align-input;
